# mvp_moteur_recherche_sondages

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  arborescence.txt  deploy_docker.sh  index.html  mega_refactor.md  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  streamlit_app.py  surveys_bd.sqlite  test_api_local.sh  ui_voulu.md  vitest.config.ts
.claude/: settings.local.json.tmp.1695162.142d6a30da4c
.devcontainer/: README.md
.github/workflows/: ci.yml
.venv-api-embedding/: pyvenv.cfg
api/: README.md  main.py
app/: test_flask_model.py
create_survey_bd/: init_bd.R  run_it_all.R
create_survey_bd/tides_2022/: 01_extract.R  (+3 more)
docs/: DECISION_microdata_parquet.md  EMBEDDINGS.md  ENRICHMENT_BRIEF.md  EXTRACTOR_BRIEF.md  INGESTION_RUNBOOK.md  aiagent_usecase.md  contexte-technique.md  epics.md  lessons_learned.md  open_questions_anlaysis.md  plot_issues.md  query_expansion.md  refactor_ux.md  reranker_reddit.md  scoring_search_output.md  verbatims_corpus.md
eval/: README.md  _agent_smoke.ts  _baseline_scoring.ts  _build_golden.py  _corpus.py  _pool.py  _pool_provenance.json  _snippets_index_only.json  _sweep.py  breakdown.ts  capture.ts  fetch_candidates.py  golden.jsonl  run.ts
ingestion/: CONVENTIONS.md  COUVERTURE.md  SCHEMA.md  __init__.py  build_docs.py  canonical.py  config.py  create_index.py  create_verbatims_index.py  embed.py  enrich.py  microdata.py  models.py  open_text.py  run.py  run_microdata.py  run_verbatims.py  validate.py  verbatims.py
lambda_model/: build_lambda.sh  lambda_function.py  requirements.txt
matching/: download_hf_model.py  explo.py  semantic_search.py
mockup/: app.js  data.js  index.html  styles.css
schemas/: .$mvp.drawio.bkp  bd_sqlite.sql  ingestion_donnees_dynamodb.md  ingestion_donnees_dynamodb.mmd  mvp.drawio
src/: App.css  App.tsx  api.ts  index.css  main.tsx  mock.ts  types.ts
testing_revenue_models/: README.md  explo.R  explo2.R  postulats.R
tests/: gen_microdata_fixture.py  test_api_embed.py  test_api_search.py  test_api_viz.py  test_build_docs.py  test_open_text.py  test_validate.py  test_verbatims.py
ui/: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
viz/: functions.py
(+154 files in other folders)
