[project]
name = "moteur-recherche-sondages"
version = "0.1.0"
description = "Ingestion + recherche : catalogue de questions de sondage (Azure AI Search)"
requires-python = ">=3.11"
dependencies = [
    "azure-search-documents>=11.5.2",
    "openai>=1.40",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.7",
    "pymupdf>=1.27.2.3",
    "pyreadstat>=1.3.5",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion"]
