[project]
name = "moteur-recherche-sondages"
version = "0.1.0"
description = "Ingestion + recherche : catalogue de questions de sondage (Azure AI Search)"
requires-python = ">=3.11"
dependencies = [
    "azure-search-documents>=11.5.2",
    "openai>=1.40",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.7",
    "pymupdf>=1.27.2.3",
    "pyreadstat>=1.3.5",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".venv", "dist", "node_modules"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear
select = ["E", "W", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion"]
